@@ -352,22 +352,6 @@
                             <enable>Skin.HasSetting(EnableBlur) + System.HasAddon(script.colorbox)</enable>
                         </control>
 
-                        <control type="radiobutton" id="9926" description="Shadows">
-                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9109)</visible>
-                            <include>Defs_Settings_Button</include>
-                            <label>$LOCALIZE[31318]</label>
-                            <selected>!Skin.HasSetting(DisableShadows)</selected>
-                            <onclick>Skin.ToggleSetting(DisableShadows)</onclick>
-                        </control>
-
-                        <control type="radiobutton" id="9927" description="Poster Back Gradient">
-                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9109)</visible>
-                            <include>Defs_Settings_Button</include>
-                            <label>$LOCALIZE[31375]</label>
-                            <selected>Skin.HasSetting(PosterBackGradient)</selected>
-                            <onclick>Skin.ToggleSetting(PosterBackGradient)</onclick>
-                        </control>
-
                         <control type="button" id="9654">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9109)</visible>
                             <label>$LOCALIZE[31321]</label>
@@ -449,14 +433,6 @@
                             <onclick condition="System.HasAddon(script.colorbox) + !Skin.HasSetting(CycleColors)">RunScript(script.colorbox,daemon=True)</onclick>
                             <onclick condition="System.HasAddon(script.colorbox) + !Skin.HasSetting(CycleColors)">AlarmClock(nms1,SetProperty(NINE_manual_set,"var=main,set=$INFO[Skin.String(colorbox_main)]|var=comp,set=$INFO[Skin.String(colorbox_comp)]|var=quality,set=$INFO[Skin.String(colorbox_quality)]|var=blursize,set=$INFO[Skin.String(colorbox_blursize)]|var=bitsize,set=$INFO[Skin.String(colorbox_bitsize)]|var=pixelsize,set=$INFO[Skin.String(colorbox_pixelsize)]|var=black,set=$INFO[Skin.String(colorbox_black)]|var=white,set=$INFO[Skin.String(colorbox_white)]",home),00:05,true)</onclick>
                             <onclick condition="System.HasAddon(script.colorbox)">Skin.ToggleSetting(CycleColors)</onclick>
-                        </control>
-
-                        <control type="radiobutton" id="9332" description="Use genre colors">
-                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9105)</visible>
-                            <include>Defs_Settings_Button</include>
-                            <label>$LOCALIZE[31056]</label>
-                            <selected>!Skin.HasSetting(PVRGuideGenreColors)</selected>
-                            <onclick>Skin.ToggleSetting(PVRGuideGenreColors)</onclick>
                         </control>
 
                         <control type="button" id="9254">
@@ -683,7 +659,13 @@
                             <selected>Skin.HasSetting(global.kioskmode)</selected>
                             <onclick>Skin.ToggleSetting(global.kioskmode)</onclick>
                         </control>
-                        
+
+                        <control type="button" id="9274" description="Customise Shutdown Menu">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>$LOCALIZE[31027]</label>
+                            <onclick>RunScript(script.skinshortcuts,type=manage&amp;group=powermenu)</onclick>
+                        </control>
 
                         <control type="radiobutton" id="9339" description="Minimal Busy Loader">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
@@ -693,13 +675,21 @@
                             <onclick>Skin.ToggleSetting(MinimalBusyLoader)</onclick>
                         </control>
 
-                        <!-- <control type="radiobutton" id="9280" description="Use hours and minutes">
+                        <control type="radiobutton" id="9332" description="Use genre colors">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
                             <include>Defs_Settings_Button</include>
-                            <label>$LOCALIZE[31090]</label>
-                            <selected>Skin.HasSetting(UseHoursMinutes)</selected>
-                            <onclick>Skin.ToggleSetting(UseHoursMinutes)</onclick>
-                        </control> -->
+                            <label>$LOCALIZE[31056]</label>
+                            <selected>!Skin.HasSetting(PVRGuideGenreColors)</selected>
+                            <onclick>Skin.ToggleSetting(PVRGuideGenreColors)</onclick>
+                        </control>
+
+                        <control type="radiobutton" id="9845" description="Show genre in EPG">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>$LOCALIZE[31378]</label>
+                            <selected>!Skin.HasSetting(PVRGuideGenreName)</selected>
+                            <onclick>Skin.ToggleSetting(PVRGuideGenreName)</onclick>
+                        </control>
 
                         <control type="radiobutton" id="9270" description="Artwork button downloads all artwork">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
@@ -718,11 +708,20 @@
                             <onclick>Skin.ToggleSetting(BounceAnimations)</onclick>
                         </control>
 
-                        <control type="button" id="9274" description="Customise Shutdown Menu">
+                        <control type="radiobutton" id="9927" description="Poster Back Gradient">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
                             <include>Defs_Settings_Button</include>
-                            <label>$LOCALIZE[31027]</label>
-                            <onclick>RunScript(script.skinshortcuts,type=manage&amp;group=powermenu)</onclick>
+                            <label>$LOCALIZE[31375]</label>
+                            <selected>Skin.HasSetting(PosterBackGradient)</selected>
+                            <onclick>Skin.ToggleSetting(PosterBackGradient)</onclick>
+                        </control>
+
+                        <control type="radiobutton" id="9926" description="Shadows">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9107)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>$LOCALIZE[31318]</label>
+                            <selected>!Skin.HasSetting(DisableShadows)</selected>
+                            <onclick>Skin.ToggleSetting(DisableShadows)</onclick>
                         </control>
 
                          <control type="button" id="9271" description="Startup Video">
