@@ -1,6 +1,8 @@
 [B]0.9.17[/B]
 Change user rating to star icon
 Add option to disable videolyrics Skin Settings > Video / Music OSD > Video Lyrics
+Fix pvr timer and record icons
+Add option to disable genre names
 
 [B]0.9.16[/B]
 LEIA - add "see more" widget item
